src/test/deca/syntax/valid/parser/oracle/unary_expr_second_deriv.deca
{
  !5.0; !("Hello World !"); !(x / 50); !readInt();
  !!"Hello"; !!(50.0); !!(x * 50); !!readInt(); !!((int) (x));
}
