src/test/deca/syntax/invalid/parser/oracle/literal_str_without_semicolon.deca
{
  int i = 0;
  "Hello World !"
}
